--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /target
 /classes
 /checkouts
-pom.xml
 pom.xml.asc
 *.jar
 *.class
@@ -18,3 +17,4 @@ pom.xml.asc
 /*-init.clj
 /.cpcache
 /.rebel_readline_history
+/settings.xml
