--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>funcool</groupId>
   <artifactId>datoteka</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0</version>
+  <version>1.2.0</version>
   <name>datoteka</name>
   <description>Filesystem utilities and Storage abstraction for Clojure.</description>
   <url>https://github.com/funcool/datoteka</url>
@@ -17,8 +17,7 @@
   <scm>
     <connection>scm:git:git://github.com/funcool/datoteka.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/funcool/datoteka.git</developerConnection>
-    <tag>a046446a45d3a9b3fc0ee1ba56a6e44d074c2b8c
-    </tag>
+    <tag>master</tag>
     <url>https://github.com/funcool/datoteka</url>
   </scm>
   <build>
